<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8DFFDF8E">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.vijaya.myorder.MainActivity">

        <TextView
            android:id="@+id/textView3"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="Pricing"
            android:textColor="#FB3D3D"
            android:textSize="25sp"
            android:typeface="sans"
            app:fontFamily="sans-serif-light" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Single Topping Pizza: $7 \nExtra Toppings: $1 each"/>

        <TextView
            android:id="@+id/textView5"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="Personal Info"
            android:textColor="#FB3D3D"
            android:textSize="25sp"
            android:typeface="sans"
            app:fontFamily="sans-serif-light" />

        <EditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Your Name"
            android:singleLine="true" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:hint="Enter Your Email"
            android:singleLine="true" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/toppings"
            android:textColor="#FB3D3D"
            android:textSize="25sp"
            android:typeface="sans"
            app:fontFamily="sans-serif-light" />
                                    <!--checkbox for each topping choice-->
        <CheckBox
            android:id="@+id/pepperoni_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/pepperoni"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/sausage_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/sausage"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/pineapple_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/pineapple"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/spinach_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/spinach"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="Number of Pizzas"
            android:textColor="#FB3D3D"
            android:textSize="25sp"
            android:typeface="sans"
            app:fontFamily="sans-serif-light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_marginRight="8dp"
                android:layout_weight="0"
                android:background="#40FB3D3D"
                android:onClick="decrement"
                android:text="▼"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/quantity_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/initial_quantity_value"
                android:textColor="#776363"
                android:textSize="36sp" />

            <Button
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:background="#40FB3D3D"
                android:onClick="increment"
                android:text="▲"
                android:textSize="25sp" />
        </LinearLayout>

        <!--layout for summary and email buttons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="0"
                android:background="#40FB3D3D"
                android:onClick="loadSummary"
                android:text="SUMMARY"
                android:textSize="22sp" />

            <Button
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:background="#40FB3D3D"
                android:onClick="sendEmail"
                android:text="ORDER"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>